* important changes in version 1.64 09/07/2010
- Removed the PERL_CORE specific chdir from all the tests
- Apply a patch from David Muir Sharnoff RT #58916, 
  "skip files via a callback and limit memory use when skipping files"
- Apply a patch from Daphne Pfister RT #59150
  "Assumes all references filename are IO::Handle's instead of trying to stringify."

* important changes in version 1.62 28/06/2010
- Apply part of patch from https://bugzilla.redhat.com/attachment.cgi?id=426194
  reported by Martin Cermak in RT #58636 relating to a Redhat ticket
  https://bugzilla.redhat.com/show_bug.cgi?id=606813
    
* important changes in version 1.60 23/04/2010
- Apply patch from Darrell K. [RT #54850] that makes write() and create_archive() close only handles
  they opened.

    When you pass a filehandle to Archive::Tar::write() or create_archive(),
    it closes the filehandle after writing to it. I think it makes more
    sense not to close a handle that A::T didn't open, since the application
    may need to write additional data to it. (Consider sockets, package
    files containing encapsulated tar archives, etc.)

    Example:

    $ perl -e 'use Archive::Tar; open(PKG, ">mypkg") or die "open: $!"; my
    $tar = Archive::Tar->new; $tar->add_data("foo.txt","hello");
    $tar->write(\*PKG); print PKG "more data" or die "print: $!";'
    print: Bad file descriptor at -e line 1.

- Fool the installer into replacing our scripts that were installed by core with versiononly set.

* important changes in version 1.58 17/02/2010
- Apply a patch from toddr@null.net that addreses RT #54714

  Subject: $@ not cleaned up after eval

  This section of code seems to be trying to use future functionality 
  not yet present in IO::Zlib (tell). I was chasing another bug and getting very confused
  by this population of $@. Could I request you cleanup $@ if you expect and/or don't care
  about failure from this eval?

* important changes in version 1.56 03/02/2010