@@ -52,11 +52,17 @@ delete $prereqs->{'IO::Compress::Bzip2'} if $opt->{n};
 $prereqs->{'Text::Diff'} = 0 if $opt->{d};
 
 
-my @LICENSE;
+WriteMakefile1(
+    LICENSE => 'perl',
+    MIN_PERL_VERSION => '5.00503',
+    META_MERGE => {
+        resources => {
+            repository => 'http://oss.dwim.org/archive-tar-new',
+        },
+    },
+    #BUILD_REQUIRES => {
+    #},
 
-push @LICENSE, 'LICENSE', 'perl' if $ExtUtils::MakeMaker::VERSION > 6.30;
-
-WriteMakefile (
     NAME            => 'Archive::Tar',
     VERSION_FROM    => 'lib/Archive/Tar.pm', # finds $VERSION
     dist            => { COMPRESS => 'gzip -9f', SUFFIX => 'gz' },
@@ -65,8 +71,7 @@ WriteMakefile (
     PREREQ_PM       => $prereqs,
     INSTALLDIRS     => ( $] >= 5.009003 ? 'perl' : 'site' ),
     AUTHOR          => 'Jos Boumans <kane[at]cpan.org>',
-	  ABSTRACT        => 'Manipulates TAR archives',
-    @LICENSE,
+    ABSTRACT        => 'Manipulates TAR archives',
 );
 
 sub _scripts {
@@ -82,4 +87,27 @@ sub _scripts {
     }
   }
   return @scripts;
+}
+
+sub WriteMakefile1 {  #Written by Alexandr Ciornii, version 0.21. Added by eumm-upgrade.
+    my %params=@_;
+    my $eumm_version=$ExtUtils::MakeMaker::VERSION;
+    $eumm_version=eval $eumm_version;
+    die "EXTRA_META is deprecated" if exists $params{EXTRA_META};
+    die "License not specified" if not exists $params{LICENSE};
+    if ($params{BUILD_REQUIRES} and $eumm_version < 6.5503) {
+        #EUMM 6.5502 has problems with BUILD_REQUIRES
+        $params{PREREQ_PM}={ %{$params{PREREQ_PM} || {}} , %{$params{BUILD_REQUIRES}} };
+        delete $params{BUILD_REQUIRES};
+    }
+    delete $params{CONFIGURE_REQUIRES} if $eumm_version < 6.52;
+    delete $params{MIN_PERL_VERSION} if $eumm_version < 6.48;
+    delete $params{META_MERGE} if $eumm_version < 6.46;
+    delete $params{META_ADD} if $eumm_version < 6.46;
+    delete $params{LICENSE} if $eumm_version < 6.31;
+    delete $params{AUTHOR} if $] < 5.005;
+    delete $params{ABSTRACT_FROM} if $] < 5.005;
+    delete $params{BINARY_LOCATION} if $] < 5.005;
+
+    WriteMakefile(%params);
 }
